--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,13 @@ flutter_intl:
     output_dir: lib/core/lang/generated
     main_locale: es
 
+flutter_launcher_icons:
+    android: ic_launcher
+    ios: true
+    remove_alpha_ios: true
+    image_path: 'assets/icons/launcher_icon.png'
+
 flutter:
     uses-material-design: true
-
-    # assets:
-    #     - assets/images
-    #     - assets/icons
+    assets:
+        - assets/icons/
